Refactor Eight Sleep binding architecture
Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>
Signed-off-by: Joe Wang <me@joewang.net>